--- a/Essays/我们如何才能开发出变革性的思想工具？.md
+++ b/Essays/我们如何才能开发出变革性的思想工具？.md
@@ -1059,17 +1059,17 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 
 本作品采用[知识共享署名4.0国际许可证](http://creativecommons.org/licenses/by/4.0/) 授权。这意味着你可以自由地复制、分享和建立该作品，只要你适当地注明其来源。请点击以下许可证链接了解详情。[![知识共享协议](https://camo.githubusercontent.com/72af7c8e70a45c471163e803748d0338b3b2b52f6b040804e549e4163de72a58/68747470733a2f2f692e6372656174697665636f6d6d6f6e732e6f72672f6c2f62792f342e302f38387833312e706e67)](http://creativecommons.org/licenses/by/4.0/)
 
-[^1]: E.g., Douglas Engelbart, [Augmenting Human Intellect: A Conceptual Framework](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962). 比如Douglas Engelbart, [Augmenting Human Intellect: A Conceptual Framework](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962).
+[^1]: 比如 Douglas Engelbart，[增强人类的智力：一个概念性框架](https://numinous.productions/ttft/assets/Engelbart1962.pdf) (1962)
 
-[^2]: Again, in Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989), among other places. Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989).
+[^2]: Alan Kay, [用户界面：一个个人观点](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)
 
-[^3]: 还是Alan Kay, [User Interface: A Personal View](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989).
+[^3]: 同样，在 Alan Kay, [用户界面：一个个人观点](https://numinous.productions/ttft/assets/Kay1989.pdf) (1989)，以及其他地方
 
 [^Mass Point 1]: 这一句语序有点怪，但我想不出更好的
 
 [^Shom 1]: emergent 在此处应当指 emergence, 即简单的部分相加，整体表现出部分所没有的性质，如蚁群表现出单独蚂蚁所没有的智慧
 
-[^4]: An account may be found in Iverson’s Turing Award lecture, [Notation as a Tool of Thought](https://numinous.productions/ttft/assets/Iverson1979.pdf) (1979). Incidentally, even Iverson is really describing a medium for thought, the APL programming language, not a narrow tool. 可以从Iverson在Turing奖获奖演讲 [Notation as a Tool of Thought](https://numinous.productions/ttft/assets/Iverson1979.pdf) (1979). 顺便说一下，Iverson这里描述的实际上是一种思考媒介APL语言，而不是狭义的工具。
+[^4]: An account may be found in Iverson’s Turing Award lecture, [Notation as a Tool of Thought](https://numinous.productions/ttft/assets/Iverson1979.pdf) (1979). Incidentally, even Iverson is really describing a medium for thought, the APL programming language, not a narrow tool. 在 Iverson 的图灵奖获奖演讲 [作为思想工具的记号](https://numinous.productions/ttft/assets/Iverson1979.pdf) (1979) 中可以找到一个说明。 顺便说一下，Iverson 这里描述的实际上是一种思考媒介 APL 语言，而不是狭义的工具。
 
 [^Mass Point 2]: 这一段后面部分翻得不是很好，甚至可能有理解错误，原文如下 To the extent that such a tool succeeds, it expands your thinking beyond what can be achieved using existing tools, including writing. The more transformative the tool, the larger the gap that is opened. Conversely, the larger the gap, the more difficult the new tool is to evoke in writing. But what writing can do, and the reason we wrote this essay, is act as a bootstrap. It’s a way of identifying points of leverage that may help develop new tools for thought. So let’s get on with it.
 
@@ -1077,45 +1077,45 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 
 [^Mass Point 4]: *mnemonic medium*直译有点莫名其妙，翻成"带有辅助记忆功能的媒介"又太拖沓。定稿的时候可以再讨论一下
 
-[^5]: For more on this argument, see Andy Matuschak, [Why books don’t work](https://andymatuschak.org/books/) (2019). 关于这个问题的更多讨论，见Andy Matuschak, [Why books don’t work](https://andymatuschak.org/books/) (2019).
+[^5]: 关于这个问题的更多讨论，见 Andy Matuschak, [为什么书本不起作用](https://andymatuschak.org/books/) (2019).
 
 [^译1]: 译者注：根据Frank Portman的解读，这句话想表达的意思是**写**音乐这事和朝着建筑物跳舞一样无厘头（后面的介词to为了达到一种结构上的对仗和语意上的荒谬被故意写成了about), 音乐不应该是用写的，而是一种内在体验的自然表达。
 
-[^6]: The literature on this effect is vast. A useful entrée is: Gwern Branwen, [Spaced Repetition for Efficient Learning](https://www.gwern.net/Spaced-repetition). 关于这种效应的文章太多了，可以从 Gwern Branwen, [Spaced Repetition for Efficient Learning](https://www.gwern.net/Spaced-repetition) 开始读。
+[^6]: 关于这种效应的文章太多了，可以从 Gwern Branwen, [高效学习的间隔重复](https://www.gwern.net/Spaced-repetition)开始读。
 
 [^Mass Point 5]: mnemonic essays的翻译有待讨论，直译有点莫名其妙
 
-[^7]: Particularly careful readers may wonder how this is possible, given that we stated earlier that the first review interval is 5 days. The explanation is that we recently modified the review schedule so the first review is after 5 days. For most of *Quantum Country*’s history the review schedule was more conservative, and this is the reason for the difference. 特别细心的读者可能会觉得这里的叙述和前面有点冲突——明明我们才说过，第一次复习的间隔是5天。是这样的，我们最近重新安排了复习间隔，所以第一次复习变成了5天之后。但量子国度早期的复习间隔是比较保守的，这就是造成差异的原因。
+[^7]: 特别细心的读者可能会觉得这里的叙述和前面有点冲突——明明我们才说过，第一次复习的间隔是 5 天。是这样的，我们最近重新安排了复习间隔，所以第一次复习变成了 5 天之后。但量子国度早期的复习间隔比较保守，这就是造成差异的原因。
 
-[^8]: In the movie *The Matrix* one of the characters (Neo) uses a computer to very rapidly upload martial arts skills into his mind. As he opens his eyes after completing the upload he tells another character (Morpheus): “I know Kung Fu”. 在电影《黑客帝国》中，其中一个角色（Neo）使用电脑快速地将功夫上传到他的脑海中。当他完成上传后睁开眼睛，对另一个角色（Morpheus）说：「I know Kung Fu」.
+[^8]: 在电影《黑客帝国》中，其中一个角色（Neo）使用电脑快速地将功夫上传到他的脑海中。当他完成上传后睁开眼睛，对另一个角色（Morpheus）说：「I know Kung Fu」.
 
-[^9]: We’ve made no attempt at all to scale this out. It’s interesting to ponder doing so. 我们还没有尝试去扩大规模，但那样做应该会很有趣。
+[^9]: 我们还没有尝试去扩大规模，但那样做应该会很有趣。
 
-[^10]: In more detail: there were 16 users in the group that did the reviews, per usual, and 25 users in the group where reviews were delayed. The 95% confidence intervals were: 91 ± 4%, 87 ± 5%, 89 ± 5%, 96 ± 3%, assuming each variable is binomial, independent and identically distributed. This latter assumption is approximate, since we’d expect some user- and question-dependent effects. Note also that this was done in an earlier version of *Quantum Country*, where the review schedule had intervals of one day, three days, one week, and and two weeks. 细节在这：有16个用户照常复习，另外25个用户被延迟复习。95%的置信区间是：91±4%, 87±5%, 89±5%, 96±3%, 假设每个变量都是二项，独立以及独立同分布的。后一个假设是近似的，因为我们期望一些与用户和与问题相关的影响。还要注意，这个实验是在早期版本的量子国度中完成的，在早起版本中，复习间隔为一天，三天，一周和两周。
+[^10]: In more detail: there were 16 users in the group that did the reviews, per usual, and 25 users in the group where reviews were delayed. The 95% confidence intervals were: 91 ± 4%, 87 ± 5%, 89 ± 5%, 96 ± 3%, assuming each variable is binomial, independent and identically distributed. This latter assumption is approximate, since we’d expect some user- and question-dependent effects. Note also that this was done in an earlier version of *Quantum Country*, where the review schedule had intervals of one day, three days, one week, and and two weeks. 这里是细节：有 16 个用户照常复习，另外 25 个用户被延迟复习。95% 的置信区间是：91±4%, 87±5%, 89±5%, 96±3%, 假设每个变量都是二项，独立以及独立同分布的。后一个假设是近似的，因为我们期望一些与用户和与问题相关的影响。还要注意，这个实验是在早期版本的量子国度中完成的，在早起版本中，复习间隔为一天，三天，一周和两周。
 
-[^11]: Strictly speaking, Quizlet’s basic product doesn’t use spaced repetition. There is, however, a paid version using spaced repetition, and it’s otherwise quite similar to many of these systems. 严格来说，基础版的Quizlet并不支持间隔重复，只有付费版的Quizlet才支持间隔重复。除此之外，Quizlet和其他的记忆系统别无二致。
+[^11]: 严格来说，基础版的 Quizlet 并不支持间隔重复，只有付费版的 Quizlet 才支持间隔重复。除此之外， Quizlet 和其他的记忆系统别无二致。
 
-[^12]: They are, however, widely used within some interesting niche audiences. For instance, there is a [thriving population](https://www.reddit.com/r/medicalschoolanki/) of medical students using Anki. 不过，这些系统在一些小圈子里得到了广泛的应用。比如，医学生里用Anki的人数正在与日俱增。
+[^12]: 不过，这些系统在一些小圈子里得到了广泛的应用。比如，医学生里使用 Anki 的人数正在[与日俱增](https://www.reddit.com/r/medicalschoolanki/)。
 
-[^13]: More generally, Wozniak is, along with Sebastian Leitner, the principal pioneer of spaced-repetition memory systems. Much of Wozniak’s thinking is available online at (or linked from) the remarkable [SuperMemopedia](http://supermemopedia.com/wiki/Main_Page). 事实上，Wozniak和Sebastian Leitner都是间隔重复记忆系统的重要开拓者。Wozniak的许多思考都可以在非凡的[SuperMemopedia](http://supermemopedia.com/wiki/Main_Page) 上找到。
+[^13]: 事实上，Wozniak 和 Sebastian Leitner 都是间隔重复记忆系统的重要开拓者。Wozniak 的许多思考都可以在非凡的 [SuperMemopedia](http://supermemopedia.com/wiki/Main_Page) 上找到。
 
-[^14]: Michael Nielsen, [Augmenting Long-term Memory](https://augmentingcognition.com/ltm.html) (2018), and Michael Nielsen, [Using spaced repetition systems to see through a piece of mathematics](http://cognitivemedium.com/srs-mathematics) (2019).迈克尔-尼尔森，[增强长期记忆](https://augmentingcognition.com/ltm.html) (2018)，以及迈克尔-尼尔森，[利用间隔重复系统看穿数学](http://cognitivemedium.com/srs-mathematics) (2019)。
+[^14]: Michael Nielsen, [增强长期记忆](https://augmentingcognition.com/ltm.html) (2018)，以及 Michael Nielsen, [使用间隔重复系统看透一个数学证明](http://cognitivemedium.com/srs-mathematics) (2019)。
 
-[^15]: **Note added December 9, 2019: This claim appears to be based on an error in our data analysis, and is now retracted. We’ve left the text in for historic reasons, but we no longer believe the claim. 2019年12月9日添加的注释：这一说法似乎是基于我们的数据分析中的一个错误，现在被收回。出于历史原因，我们保留了这段文字，但我们不再相信这一说法。**
+[^15]: **2019 年 12 月 9 日添加的注释：这一说法似乎是基于我们的数据分析中的一个错误，现在被收回。出于历史原因，我们保留了这段文字，但我们不再相信这一说法。**
 
-[^16]: Michael Nielsen, [Augmenting Long-Term Memory](https://augmentingcognition.com/ltm.html) (2018).迈克尔-尼尔森，[增强长期记忆](https://augmentingcognition.com/ltm.html) (2018)
+[^16]: Michael Nielsen, [增强长期记忆](https://augmentingcognition.com/ltm.html) (2018).
 
-[^17]: Steven M. Smith, Arthur Glenberg, and Robert A. Bjork, [Environmental context and human memory](https://numinous.productions/ttft/assets/Smith1978.pdf) (1978).Steven M. Smith, Arthur Glenberg, and Robert A. Bjork, [环境背景和人类记忆](https://numinous.productions/ttft/assets/Smith1978.pdf) (1978)。
+[^17]: Steven M. Smith, Arthur Glenberg, and Robert A. Bjork, [环境背景和人类记忆](https://numinous.productions/ttft/assets/Smith1978.pdf) (1978).
 
-[^18]: An enjoyable extended introduction to such techniques may be found in Joshua Foer’s book “Moonwalking with Einstein” (2012).在约书亚-福尔的《与爱因斯坦月球漫步》(2012年)一书中，可以找到对这种技巧的愉快的扩展介绍。
+[^18]: An enjoyable extended introduction to such techniques may be found in Joshua Foer’s book “Moonwalking with Einstein” (2012). 在 Joshua Foer 的《与爱因斯坦月球漫步》(2012) 一书中，可以找到对这种技巧的愉快的扩展介绍。
 
-[^19]: A small minority of the population does not possess a mind’s eye, and so cannot mentally visualize. This condition is known as [aphantasia](https://en.wikipedia.org/wiki/Aphantasia). One of us [asked on Twitter](https://twitter.com/michael_nielsen/status/1144281873197096961) if any aphantasics had tried using the method of loci, and if so how well it worked for them. The replies were remarkably heterogeneous (and striking), but most said such mnemonic techniques did not work for them. This deserves further study.少数人不具备精神之眼，因此不能在精神上进行视觉化。这种情况被称为[象皮症](https://en.wikipedia.org/wiki/Aphantasia)。我们中的一个人[在Twitter上问](https://twitter.com/michael_nielsen/status/1144281873197096961)，是否有象皮症患者尝试过使用位置法，如果有，对他们来说效果如何。答复是非常不同的（和引人注目的），但大多数人说这种记忆技巧对他们不起作用。这值得进一步研究。
+[^19]: A small minority of the population does not possess a mind’s eye, and so cannot mentally visualize. This condition is known as [aphantasia](https://en.wikipedia.org/wiki/Aphantasia). One of us [asked on Twitter](https://twitter.com/michael_nielsen/status/1144281873197096961) if any aphantasics had tried using the method of loci, and if so how well it worked for them. The replies were remarkably heterogeneous (and striking), but most said such mnemonic techniques did not work for them. This deserves further study. 少数人不具备精神之眼，因此不能在精神上进行视觉化。这种情况被称为[象皮症](https://en.wikipedia.org/wiki/Aphantasia)。我们中的一个人[在 Twitter 上问](https://twitter.com/michael_nielsen/status/1144281873197096961)，是否有象皮症患者尝试过使用位置法，如果有，对他们来说效果如何。答复是非常不同的（和引人注目的），但大多数人说这种记忆技巧对他们不起作用。这值得进一步研究。
 
-[^20]: The last four paragraphs are adapted from [Augmenting Long-term Memory](http://augmentingcognition.com/ltm.html) (2018).最后四段改编自[增强长期记忆](http://augmentingcognition.com/ltm.html) (2018)。
+[^20]: The last four paragraphs are adapted from [Augmenting Long-term Memory](http://augmentingcognition.com/ltm.html) (2018). 最后四段改编自[增强长期记忆](http://augmentingcognition.com/ltm.html) (2018)。
 
-[^21]: The last two paragraphs are adapted from our forthcoming mnemonic essay: Andy Matuschak and Michael Nielsen, [How quantum teleportation works](https://quantum.country/teleportation) (2019).最后两段改编自我们即将发表的助记文章。安迪-马图沙克和迈克尔-尼尔森，[量子传送如何运作](https://quantum.country/teleportation) (2019)。
+[^21]: The last two paragraphs are adapted from our forthcoming mnemonic essay: Andy Matuschak and Michael Nielsen, [How quantum teleportation works](https://quantum.country/teleportation) (2019). 最后两段改编自我们即将发表的助记文章。Andy Matuschak and Michael Nielsen，[量子传送如何运作](https://quantum.country/teleportation) (2019)。
 
-[^22]: See, e.g., William G. Chase and Herbert A. Simon, [Perception in Chess](https://numinous.productions/ttft/assets/Chase197s.pdf) (1973). Some fascinating earlier work in a related vein was done by Adrian D. de Groot, and summarized in his book *Thought and Choice in Chess* (1965).例如，见William G. Chase和Herbert A. Simon, [Perception in Chess](https://numinous.productions/ttft/assets/Chase197s.pdf) (1973)。阿德里安-D-德格罗特在相关领域的早期工作很有吸引力，并在他的《国际象棋中的思考与选择》一书中进行了总结*（1965）。
+[^22]: See, e.g., William G. Chase and Herbert A. Simon, [Perception in Chess](https://numinous.productions/ttft/assets/Chase197s.pdf) (1973). Some fascinating earlier work in a related vein was done by Adrian D. de Groot, and summarized in his book *Thought and Choice in Chess* (1965). 例如，见 William G. Chase 和 Herbert A. Simon, [国际象棋中的感知](https://numinous.productions/ttft/assets/Chase197s.pdf) (1973)。Adrian D. de Groot 在相关领域的早期工作很有吸引力，并在他的《国际象棋中的思考与选择》一书中进行了总结（1965）。
 
 [^23]: We’ve met many mathematicians and physicists who say that one reason they went into mathematics or physics is because they hated the rote memorization common in many subjects, and preferred subjects where it is possible to derive everything from scratch. But in conversation it quickly becomes evident that they have memorized an enormous number of concepts, connections, and facts in their discipline. It’s fascinating these people are so blind to the central role memory plays in their own thinking. 我们见过许多数学家和物理学家，他们说他们进入数学或物理学的一个原因是他们讨厌许多学科中常见的死记硬背，而更喜欢那些有可能从头开始推导出一切的学科。但在交谈中，人们很快就会发现，他们已经记住了他们学科中大量的概念、联系和事实。令人着迷的是，这些人对记忆在他们自己的思维中所扮演的核心角色如此视而不见。
 
@@ -1139,16 +1139,16 @@ This work is licensed under a [Creative Commons Attribution 4.0 International Li
 
 [^33]: Programmer tools are a case where the insight-through-making loop operates quite well. The avoidance of the public goods problem is enabled by a complex set of factors, including the fact that this is a case where many highly skilled researchers are simultaneously also accomplished makers, and it’s either their job to produce public goods (researchers) or an enjoyable hobby. To a lesser extent the same is true in the artistic and music communities. [脚注]程序员工具是一个洞察力——通过制造循环运作得相当好的例子。避免公共物品问题是由一系列复杂的因素促成的，其中包括这样一个事实：在这种情况下，许多高技能的研究人员同时也是有成就的制造者，生产公共物品(研究人员)是他们的工作，或者是一种愉快的爱好。在较小的程度上，艺术和音乐界也是如此。
 
-[^34]: Shan Carter and Michael Nielsen, [Using Artificial Intelligence to Augment Human Intelligence](https://distill.pub/2017/aia/) (2017). Shan Carter和Michael Nielsen，[使用人工智能来增强人类智能](https://distill.pub/2017/aia/) (2017)。
+[^34]: Shan Carter and Michael Nielsen, [Using Artificial Intelligence to Augment Human Intelligence](https://distill.pub/2017/aia/) (2017). Shan Carter 和 Michael Nielsen，[使用人工智能来增强人类智能](https://distill.pub/2017/aia/) (2017)。
 
 [^35]: Sufficiently motivated reasoners will, of course, ignore any conclusion they don’t like. Such people are most likely a lost cause to serious thought. 当然，有足够动机的推理者会忽略任何他们不喜欢的结论。
 
 [^36]: Of course, systems like Jupyter go back decades. There are antecedents in Knuth’s notion of literate programming, in Mathematica notebooks, in PARC’s Learning Research Group, in the PLATO system (and, more broadly, computer-assisted instruction), to name but a few. In the discussion below we emphasize opportunities that seem to us undervalued in many of these prior systems. 当然，像 Jupyter 这样的系统可以追溯到几十年前。在 Knuth 的识字编程概念中，在 Mathematica notebook 中，在 PARC 的学习研究小组中，在 PLATO 系统（以及更广泛的计算机辅助教学）中，都有一些先例，仅举几例。在下面的讨论中，我们强调了在许多这些先前的系统中似乎被低估的机会。
 
-[^37]: This is, of course, a placeholder term. “Executable essay” would in many ways be more natural, though unfortunately that term is perhaps even more naturally interpreted as meaning “web page”, in the current context. 当然，这是一个占位的术语。"可执行的文章" 在许多方面会更自然，尽管不幸的是，在目前的语境中，这个词也许更自然地被解释为 "网页"。
+[^37]: This is, of course, a placeholder term. “Executable essay” would in many ways be more natural, though unfortunately that term is perhaps even more naturally interpreted as meaning “web page”, in the current context. 当然，这是一个占位的术语。「可执行的文章」在许多方面会更自然，尽管不幸的是，在目前的语境中，这个词也许更自然地被解释为「网页」。
 
-[^38]: A related argument has been made in Eric von Hippel’s book “Democratizing Innovation” (2005), which identifies many instances where what appears to be commercial product development is based in large or considerable part on innovations from users. Eric von Hippel的《创新的民主化》（2005）一书中提出了一个相关的论点，该书指出了许多看似商业化的产品开发在很大程度上或相当程度上是基于用户的创新。
+[^38]: A related argument has been made in Eric von Hippel’s book “Democratizing Innovation” (2005), which identifies many instances where what appears to be commercial product development is based in large or considerable part on innovations from users. Eric von Hippel 的《创新的民主化》（2005）一书中提出了一个相关的论点，该书指出了许多看似商业化的产品开发在很大程度上或相当程度上是基于用户的创新。
 
 [^39]: A similar argument has been made by Rachel Thomas, [Providing a Good Education in Deep Learning](https://www.fast.ai/2016/10/08/teaching-philosophy/) (2016). Rachel Thomas 也提出了类似的论点，[提供良好的深度学习教育](https://www.fast.ai/2016/10/08/teaching-philosophy/) (2016)。
 
-[^40]: The masters of this are video game designers. See, for example, Dan Cook, [Building a Princess Saving App](https://numinous.productions/ttft/assets/Cook2008.pdf) (2008), and Jonathan Blow and Marc ten Bosch, [Designing to Reveal the Nature of the Universe](https://www.youtube.com/watch?v=OGSeLSmOALU) (2011). 例如，见丹-库克，[建立一个拯救公主的应用程序](https://numinous.productions/ttft/assets/Cook2008.pdf) (2008)，以及乔纳森-布洛和马克-腾-博世，[设计揭示宇宙的本质](https://www.youtube.com/watch?v=OGSeLSmOALU) (2011)。
+[^40]: The masters of this are video game designers. See, for example, Dan Cook, [Building a Princess Saving App](https://numinous.productions/ttft/assets/Cook2008.pdf) (2008), and Jonathan Blow and Marc ten Bosch, [Designing to Reveal the Nature of the Universe](https://www.youtube.com/watch?v=OGSeLSmOALU) (2011). 这方面的大师是电子游戏设计师。例如，Dan Cook, [Building a Princess Saving App](https://numinous.productions/ttft/assets/Cook2008.pdf) (2008)，以及 Jonathan Blow 和 Marc ten Bosch, [Designing to Reveal the Nature of the Universe](https://www.youtube.com/watch?v=OGSeLSmOALU) (2011)。
